--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "recharts": "^2.15.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
