--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "command-exists": "^1.2.9",
     "dotenv": "^16.4.7",
+    "elevenlabs": "^1.56.1",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
