--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "command-exists": "^1.2.9",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "elevenlabs": "^1.56.1",
     "lucide-react": "^0.484.0",
