--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "axios": "^1.8.4",
+    "@types/formidable": "^3.4.5",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "command-exists": "^1.2.9",
     "dotenv": "^16.4.7",
     "elevenlabs": "^1.56.1",
+    "formidable": "^3.5.4",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.484.0",
     "mammoth": "^1.9.0",
     "next": "15.2.4",
